style: fix dark mode

--- a/common/components/base/BaseAutoComplete/BaseAutoComplete.module.scss
+++ b/common/components/base/BaseAutoComplete/BaseAutoComplete.module.scss
@@ -10,8 +10,16 @@
         overflow-y: auto;
         box-shadow: 1;
         &-item {
-            &:hover {
+            position: relative;
+            &:hover::before {
+                content: '';
+                position: absolute;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
                 background-color: var(--chakra-colors-gray-100);
+                opacity: 0.2;
             }
         }
     }
